--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="syle.css" />
+		<title>CV</title>
+	</head>
+	<body>
+		<div class="container">
+			<h1 class="name">Nikolai Voloshchik</h1>
+			<figure class="about-me">
+				<img class="about-me__photo" src="myPhoto.jpg" alt=" my photo" />
+				<figcaption class="about-me__description">
+					Some words about myself... I've graduated Belarusian State
+					Technological University in 2021, went through the army and worked as
+					a designer in the chemical industry for one year. I start thinking
+					about programming 2 years ago but start learning right after army. Now
+					I've almost a year of experiance in web-programming and I realy enjoy
+					this profession. What you really need to know about me is that I
+					always reach my goal, and right now that goal is to be a good IT
+					specialist. My hobbies are sport, travelling, computer games and the
+					new one - writting code.
+				</figcaption>
+			</figure>
+			
+		</div>
+	</body>
 </html>
