--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Solitreo&display=swap"
+			rel="stylesheet"
+		/>
+
 		<link rel="stylesheet" href="syle.css" />
 		<title>CV</title>
 	</head>
 	<body>
 		<div class="container">
-			<h1 class="name">Nikolai Voloshchik</h1>
+			<h1 class="name title">Nikolai Voloshchik</h1>
 			<figure class="about-me">
 				<img class="about-me__photo" src="myPhoto.jpg" alt=" my photo" />
 				<figcaption class="about-me__description">
@@ -24,7 +31,48 @@
 					new one - writting code.
 				</figcaption>
 			</figure>
-			
+			<section class="skills">
+				<h2 class="skills__title title">Skills</h2>
+				<div class="skills__container">
+					<h3 class="skills__front-title">Frontend</h3>
+					<ul class="skills__front-list">
+						<li>HTML/CSS</li>
+						<li>Git/GitHub</li>
+						<li>JS/TS</li>
+						<li>React/React-router-dom/Redux/Rtk</li>
+						<li>БЭМ/KISS/DRY</li>
+					</ul>
+					<h3 class="skills__back-title">Backend</h3>
+					<ul class="skills__back-list">
+						<li>NodeJs/Express</li>
+						<li>PostgreSQL/PgAdmin</li>
+					</ul>
+				</div>
+			</section>
+			<section class="contacts">
+				<h2 class="contacts__title title"> Contacts</h2>
+				<ul>
+					<li>
+						Github:
+						<a href="https://github.com/KolyaVol"
+							>https://github.com/KolyaVol</a
+						>
+					</li>
+					<li>
+						LinkedIn:
+						<a href="https://www.linkedin.com/in/nikolai-voloshchik-625643253"
+							>https://www.linkedin.com/in/nikolai-voloshchik-625643253</a
+						>
+					</li>
+					<li>Discord: Kolya_Vol(@KolyaVol)</li>
+					<li>
+						Email:
+						<a href="https://nikolai.voloshchik@mail.ru"
+							>https://nikolai.voloshchik@mail.ru</a
+						>
+					</li>
+				</ul>
+			</section>
 		</div>
 	</body>
 </html>
