fix: remove wrong slashes

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+		<link rel="preconnect" href="https://fonts.googleapis.com" >
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
 		<link
 			href="https://fonts.googleapis.com/css2?family=Solitreo&display=swap"
 			rel="stylesheet"
-		/>
+		>
 
-		<link rel="stylesheet" href="syle.css" />
+		<link rel="stylesheet" href="syle.css">
 		<title>CV</title>
 	</head>
 	<body>
 		<div class="container">
 			<h1 class="name title">Nikolai Voloshchik</h1>
 			<figure class="about-me">
-				<img class="about-me__photo" src="myPhoto.jpg" alt=" my photo" />
+				<img class="about-me__photo" src="myPhoto.jpg" alt=" my photo">
 				<figcaption class="about-me__description">
 					Some words about myself... I've graduated Belarusian State
 					Technological University in 2021, went through the army and worked as
@@ -50,7 +50,7 @@
 				</div>
 			</section>
 			<section class="contacts">
-				<h2 class="contacts__title title"> Contacts</h2>
+				<h2 class="contacts__title title">Contacts</h2>
 				<ul>
 					<li>
 						Github:
